2006-06-14  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Mark up strings for translation.
	  Compare against translated string.
	
	  Mark up configuration widgets with symbolic names to
	  avoid spaces or translated strings in commandline modes.

2006-06-12  Paul Walmsley  <paul@booyaka.com>

	* canon.h: Fix build failure when CANON_EXPERIMENTAL_20D is not
	defined, by wrapping the release_params array in an '#ifdef
	CANON_EXPERIMENTAL_20D'

2006-06-11  Paul Walmsley  <paul@booyaka.com>

	* usb.c: Fix the debug messages in canon_usb_dialogue_full() to
	report the correct function name.

2006-06-11  Paul Walmsley  <paul@booyaka.com>

	* canon.[ch], usb.[ch], serial.[ch], library.c: Fix existing
	compile-time warnings.  Most of the fixes fell into one of these
	categories: (A) Converting length fields from signed int/long to
	unsigned, unless the meaning of the field is overloaded to pass
	back a gphoto2 error code (which are negative);
	(B) Converting fields of binary data used in camera interaction
	from signed char to unsigned char; (C) Casting unsigned char
	buffers passed to the gphoto2 port code, etc. to signed char;
	(D) Reviewing comparisons between signed and unsigned numbers, and
	ensuring that the comparisons are safely restricted to unsigned
	numbers when necessary.

	* Makefile.am: add '-Wall -Wextra -Wno-unused-parameter
	-Wno-missing-field-initializers' to CPPFLAGS.

2006-06-09  Paul Walmsley  <paul@booyaka.com>

	* usb.c: Modify identify camera code to retry quickly, and to
        double the retry delay with each failure.  This seems to work
        well for at least the Canon EOS 5D, where the first identify
        often is ignored by the camera, but the second identify camera
        generates a response, no matter how quickly it is sent after the
        first.

2006-06-07  Hubert Figuiere  <hub@figuiere.net>

	* doc/5d-capture: new documentation on capture for changes below.

2006-06-07  Paul Walmsley <paul@booyaka.com>
